fix: Suppression de la propriété 'bodyParser' de vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,7 @@
     "functions": {
       "api/recipe.js": {
         "maxDuration": 10,
-        "memory": 1024,
-        "bodyParser": {
-          "sizeLimit": "4mb"
-        }
+        "memory": 1024
       }
     }
   }
