--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "functions": {
       "api/recipe.js": {
-        "maxDuration": 10,
-        "memory": 1024
+        "memory": 1024,
+        "maxDuration": 10
       }
     }
   }
